KSENROLL-4586: modified the margin-left of paginate_disabled_previous class to 40px to fix the overlapping "previous" and "next" links
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@41690 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -37,7 +37,7 @@
 
 /* Pagination nested */
 .paginate_disabled_previous, .paginate_enabled_previous, .paginate_disabled_next, .paginate_enabled_next {
-    height: 19px; width: 19px; margin-left: 3px; float: left;
+    height: 19px; width: 19px; margin-left: 40px; float: left;
 }
 
 
